resources/http/http_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-service
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http-80-tcp
    nodePort: 30280
    port: 80
    protocol: TCP
  selector:
    app: http
  sessionAffinity: None
  type: NodePort
